--- a/themes/clsl/sass/pages/_events.scss
+++ b/themes/clsl/sass/pages/_events.scss
@@ -117,6 +117,7 @@
     float: left;
     width: 30%;
     margin-left: 5%;
+    margin-bottom: 5%;
 
     &:nth-child(3n + 1)
     {
@@ -142,7 +143,6 @@
   .view-footer
   {
     clear: both;
-    padding-top: 70px;
     text-align: center;
   }
 
